2009-10-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* Enum.cs: Add an internal Value property as a single point to 
	call the internal call get_value.

2009-10-06  Sebastien Pouliot  <sebastien@ximian.com>

	* String.cs: Remove normalization methods for Moonlight

2009-10-06  Jonathan Chambers  <joncham@gmail.com>

	* String.cs (Contains): Use CompareOptions.Ordinal. Fixes bug
	#535425.

2009-10-04  Mark Probst  <mark.probst@gmail.com>

	* AppDomain.cs: Check for static AppDomainInitializer earlier to
	throw the appropriate exception instead of failing at
	serialization.

2009-10-04  Mark Probst  <mark.probst@gmail.com>

	* AppDomainSetup.cs: Functionality for serializing a few members
	to simplify cross-domain copying from within the runtime.

	* AppDomain.cs (CreateDomain): Make AppDomainSetup serialize the
	necessary members in preparation for the cross-domain copy.

	* Environment.cs: Corlib version bump.

2009-10-02  Marek Safar  <marek.safar@gmail.com>

	* Array.cs, Decimal.cs, String.cs, Console.cs, _AppDomain.cs,
	AppDomain.cs: Removed prehistoric mcs workarounds.

2009-09-30  Mark Probst  <mark.probst@gmail.com>

	* Thread.cs: Remove serialized culture icall stuff from
	InternalThread.  Implement it by using the cross-domain byte array
	transfer icalls.

	* Environment.cs: Corlib version bump.

2009-09-29 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* TermInfoDriver.cs: attempt to fix bug #527487.

2009-09-28  Atsushi Enomoto  <atsushi@ximian.com>

	* Console.cs : do not use codepage 28591. It breaks build on
	  Japanese Windows.

2009-09-27 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* TermInfoDriver.cs: avoid segv if the pointer is not properly
	initialized.

2009-09-26  Mark Probst  <mark.probst@gmail.com>

	* NumberFormatter.cs: Remove the _thread field.

2009-09-26  Mark Probst  <mark.probst@gmail.com>

	* Environment.cs: Corlib version bump.

2009-09-24  Zoltan Varga  <vargaz@gmail.com>

	* Type.cs: Initialize the Missing field.
