@@ -463,27 +463,27 @@ namespace System
 
 		public static bool operator > (Decimal d1, Decimal d2) 
 		{
-			return decimalCompare (ref d1, ref d2) > 0;
+			return Compare (d1, d2) > 0;
 		}
 
 		public static bool operator >= (Decimal d1, Decimal d2) 
 		{
-			return decimalCompare (ref d1, ref d2) >= 0;
+			return Compare (d1, d2) >= 0;
 		}
 
 		public static bool operator < (Decimal d1, Decimal d2) 
 		{
-			return decimalCompare (ref d1, ref d2) < 0;
+			return Compare (d1, d2) < 0;
 		}
 
 		public static bool operator <= (Decimal d1, Decimal d2) 
 		{
-			return decimalCompare (ref d1, ref d2) <= 0;
+			return Compare (d1, d2) <= 0;
 		}
 
 		public static bool Equals (Decimal d1, Decimal d2) 
 		{
-			return decimalCompare (ref d1, ref d2) == 0;
+			return Compare (d1, d2) == 0;
 		}
 
 		public override bool Equals (object value) 
@@ -668,14 +668,13 @@ namespace System
 			if (!(value is Decimal))
 				throw new ArgumentException (Locale.GetText ("Value is not a System.Decimal"));
 
-			Decimal d2 = (Decimal)value;
-			return decimalCompare (ref this, ref d2);
+			return Compare (this, (Decimal)value);
 		}
 
 #if NET_2_0
 		public int CompareTo (Decimal value)
 		{
-			return decimalCompare (ref this, ref value);
+			return Compare (this, value);
 		}
 
 		public bool Equals (Decimal value) 
